# HelloOpenGL cmakelist file
cmake_minimum_required(VERSION 3.0)

project(01_Getting_Started)

add_executable(HelloWindow "HelloWindow.cpp")
add_executable(HelloWindow2 "HelloWindow2.cpp")

add_executable(HelloTriangle "HelloTriangle.cpp")

add_executable(HelloShader "HelloShader.cpp")


add_executable(HelloTexture "HelloTexture.cpp")


add_executable(HelloTexture2 "HelloTexture2.cpp")
