# HelloOpenGL cmakelist file
cmake_minimum_required(VERSION 3.0)

project(01_Getting_Started)

add_executable(HelloWindow "HelloWindow.cpp")
add_executable(HelloWindow2 "HelloWindow2.cpp")
add_executable(HelloTriangle "HelloTriangle.cpp")
add_executable(HelloShader "HelloShader.cpp")
add_executable(HelloTexture "HelloTexture.cpp")
add_executable(HelloTexture2 "HelloTexture2.cpp")
add_executable(HelloGlm "HelloGlm.cpp")
add_executable(HelloGlm1 "HelloGlm1.cpp")
add_executable(Hello3D "Hello3D.cpp")
add_executable(Hello3DRotate "Hello3DRotate.cpp")
add_executable(Hello3DMulCube "Hello3DMulCube.cpp")
add_executable(HelloCamare "HelloCamare.cpp")
add_executable(HelloCamare1 "HelloCamare1.cpp")
